@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model

class Organization {
    name
    vatNumber
    website
    phoneNumber
    email
}

class Employee {
    name
    admissionDate
    birthDate
    address
    contactInfo
    IdDocType
    IdNumber
}

class FM{

}

class Vehicle{
    plate id
    brand
    model
    type
    tare
    gross weight
    current km
    register date
    acquisition date
    checkup frequency kms
}

Organization "1" -- "*" Employee : "has >"
FM --|> Employee
FM "1" -- "*" Vehicle : "registers >"

@enduml